--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.5.1"
+futures = "0.3.30"
 serde = { version = "1.0.196", features = ["derive"] }
+serde_json = "1.0.113"
 tokio = "1.36.0"
